--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Our Romantic Journey</title>
+
     <script src="https://cdn.tailwindcss.com"></script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&family=Quicksand:wght@300;400;500;600;700&family=Pacifico&display=swap"
       rel="stylesheet"
     />
+
     <style>
       body {
         font-family: "Quicksand", sans-serif;
@@ -39,7 +42,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <!-- DEV entry point -->
-    <script type="module" src="/index.tsx"></script>
+    <!-- Vite will inject the correct JS here during build -->
   </body>
 </html>
