--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </style>
   </head>
   <body>
-    <div id="root"></div>
-    <!-- Vite will inject the correct JS here during build -->
+<div id="root"></div>
+<script type="module" src="/index.tsx"></script>
   </body>
 </html>
